# AlloySpecRepair

./: .env-template  .gitignore  README.md  pyproject.toml
.github/workflows/: generator-generic-ossf-slsa3-publish.yml
Artifacts/Arepair_iter_gpt_4/: Setting-2.txt  Setting-4.txt
Iterations/Arepair_iter_gpt35/: Setting-1.txt  Setting-2.txt  Setting-3.txt
Iterations/Arepair_iter_gpt_4/: Setting-1.txt  Setting-3.txt  Setting-5.txt  Setting-6.txt
Results/ARepair_gpt35_results/: ANALYSIS_COUNT_results_arepair_Setting-1.csv  ANALYSIS_COUNT_results_arepair_Setting-2.csv  ANALYSIS_COUNT_results_arepair_Setting-3.csv  ANALYSIS_results_arepair_Setting-1.csv  ANALYSIS_results_arepair_Setting-2.csv  ANALYSIS_results_arepair_Setting-3.csv
Results/ARepair_gpt_4_results/: ANALYSIS_COUNT_results_arepair_Setting-1.csv  ANALYSIS_COUNT_results_arepair_Setting-2.csv  ANALYSIS_COUNT_results_arepair_Setting-3.csv  ANALYSIS_COUNT_results_arepair_Setting-4.csv  ANALYSIS_COUNT_results_arepair_Setting-5.csv  ANALYSIS_COUNT_results_arepair_Setting-6.csv  ANALYSIS_results_arepair_Setting-1.csv  ANALYSIS_results_arepair_Setting-2.csv  ANALYSIS_results_arepair_Setting-3.csv  (+14 more)
datasets/: Readme.md  areapir_bug_type.xlsx
repair_alloy_spec/: Alloy_Repair.py  alloy_verification_tool.py  repair_chat.py  utility.py
results_arepair_Setting-1/: final_summary.csv  interaction_log.txt  summary.csv
results_arepair_Setting-2/: final_summary.csv  interaction_log.txt  process_summary.py  summary.csv
results_arepair_Setting-3/: final_summary.csv  interaction_log.txt  process_summary.py  summary.csv
(+19154 files in other folders)
