[tool.poetry]
name = "RepairAlloySpec"
version = "0.1.0"
description = ""
authors = ["Mohannadcse <mohannad.alhanahnah@gmail.com>"]
readme = "README.md"
packages = [{include = "repair_alloy_spec"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langroid = "0.1.244"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
